...
                    }
                    ,
                    modifier = Modifier
                        .height(40.dp),
                    shape = RoundedCornerShape(50)) {

                    Icon(painterResource(id = R.drawable.ic_arrow_back), contentDescription ="FormSee", modifier = Modifier.size(20.dp), tint = Color.Black )

                    Text("Form",fontSize = 14.sp, fontFamily = FontFamily.SansSerif, fontWeight = FontWeight.Normal,modifier = Modifier.padding(start = 20.dp), color = Color.Black)
                    Spacers()

                }
            }
...
