...
                Text(
                    text = "Error: Ingrese un correo valido",
                    color = MaterialTheme.colors.error,
                    style = MaterialTheme.typography.caption,
                    modifier = Modifier
                        .padding(start = 16.dp)
                        .testTag("user_error_session")
                )
            }

            Spacers()//10
            OutlinedTextField(
                value = password,
...
                Text(
                    text = "Error: Ingrese una contraseña",
                    color = MaterialTheme.colors.error,
                    style = MaterialTheme.typography.caption,
                    modifier = Modifier
                        .padding(start = 16.dp)
                        .testTag("password_error_session")
                )
            }
            SimpleSpacers()//10
            Box(
                modifier = Modifier
                    .fillMaxWidth()
...
