...


@ExperimentalPagerApi
@Composable
fun TabsSession(pagerState: PagerState) {

    val list = listOf("PACIENTE", "MEDICO")
    val lists = listOf(
        painterResource(id = R.drawable.ic_person),
        painterResource(id = R.drawable.ic_medical)

    )
    val scope = rememberCoroutineScope()
...
